[tool.poetry]
name = "repl_python3_LUMI-BOT"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaleido = "0.2.0"
discord = "^1.7.3"
pytz = "^2021.3"
pandas = "^1.3.4"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
